FACES-1990 Develop portal:inputRichText component FACES-1714 Develop Liferay Faces Showcase (added use-cases for portal:inputRichText)

--- a/demos/showcase/showcase-webapp/src/main/resources/i18n.properties
+++ b/demos/showcase/showcase-webapp/src/main/resources/i18n.properties
@@ -344,6 +344,7 @@ answer-at-stackoverflow=answer at stackoverflow
 append-new-files=Append New Files
 attribute-value=Attribute Value
 back-to-navigation-with=Back to Navigation with
+bbcode=BBCode
 birthday=Birthday
 block=Block
 bridge-inputfile=[javadoc:com.liferay.faces.bridge.component.inputfile.InputFile] is a [javadoc:javax.faces.component.UIInput] component that renders an `&lt;input&gt;` element with `type="file"`. Since it extends [javadoc:javax.faces.component.html.HtmlInputFile], it supports all the features of [vdldoc:h:inputFile] and also supports multi-file uploads.
@@ -389,6 +390,7 @@ conversion-to-a-date-using-f-convertdatetime=Conversion to a [javadoc:java.util.
 converter-message=Failed to convert this field
 copy-into-the-hidden-input=Copy into the hidden input
 country=Country
+creole=Creole
 custom-filter=Custom Filter
 customers=Customers
 data=Data
@@ -402,6 +404,7 @@ delay=Delay
 delete=Delete
 disable=Disable
 dislike=Dislike
+dom-events=DOM Events
 drop-down=Dropdown
 dynamic-tabs=Dynamic Tabs
 edit=Edit
@@ -530,6 +533,15 @@ parameter-value=Parameter Value
 password=Password
 pick=Pick
 please-consider-using=Please consider using
+portal-inputrichtext=[javadoc:com.liferay.faces.portal.component.inputrichtext.InputRichText] is a [javadoc:javax.faces.component.UIInput] component that renders a field for editing rich text.
+portal-inputrichtext-general=The general usage is to support authoring of rich text as *fragments of HTML*.
+portal-inputrichtext-bbcode=Authoring of *BBCode* rich text is supported by specifying the [vdldoc:portal:inputRichText:editorKey] attribute with a Liferay Portal *property key* that has a value of `ckeditor_bbcode`.
+portal-inputrichtext-creole=Authoring of *Creole* rich text is supported by specifying the [vdldoc:portal:inputRichText:editorKey] attribute with a Liferay Portal *property key* that has a value of `ckeditor_creole`.
+portal-inputrichtext-default-value=A *default value* can specified using when the [vdldoc:portal:inputRichText:value] attribute is bound via EL to a model bean property.
+portal-inputrichtext-dom-events=A subset of *DOM events* are supported including `onblur`, `onchange`, and `onfocus`.
+portal-inputrichtext-instant-ajax=The component supports *instant Ajax* by simply adding an [vdldoc:f:ajax] child tag. Supported values for the [vdldoc:f:ajax] [vdldoc:f:ajax:event] attribute are `blur`, `focus`, and `valueChange` (the default).
+portal-inputrichtext-validation=The [vdldoc:portal:inputRichText:minPlainTextChars] and [vdldoc:portal:inputRichText:maxPlainTextChars] attributes control the *minimum/maximum number of plain text characters*, meaning characters that do not include HTML tags such as `&lt;strong&gt;`, `&lt;em&gt;`, and `&lt;a href="..."&gt;`.
+portal-inputrichtext-validation-example-1=Specifying `minPlainTextChars="10"` and `maxPlainTextChars="144"`
 portal-nav=[javadoc:com.liferay.faces.portal.component.nav.Nav] is a [javadoc:javax.faces.component.UIData] (iterator) component that renders a `&lt;ul&gt;...&lt;/ul&gt` (unordered) list. It is designed to be used in conjunction with [vdldoc:portal:navItem] child component tags.
 portal-nav-data-model=Since it extends [javadoc:javax.faces.component.UIData], it can render list items *dynamically* when the [vdldoc:portal:navItem] content is set via EL to a model bean property (which is wrapped implicitly by JSF with a [javadoc:javax.faces.model.DataModel]). The [vdldoc:portal:navItem:var] attribute can be used to introduce a variable name into the EL when iterating over the model.
 portal-nav-general=Child [vdldoc:portal:navItem] child component tags are rendered as `&lt;li&gt;...&lt;/li&gt;` (list item) elements.
