FACES-1985 Develop portal:navBar, portal:nav, and portal:navItem components (delay rendering of portal:navBar until after children have been rendered, improved description of collapsible attribute) FACES-1714 Develop Liferay Faces Showcase (added responsive use-case for portal:navBar, added rendered checkbox for portal:nav)

--- a/demos/showcase/showcase-webapp/src/main/resources/i18n.properties
+++ b/demos/showcase/showcase-webapp/src/main/resources/i18n.properties
@@ -549,6 +549,8 @@ portal-nav-general-example-1=Default styling
 portal-nav-general-example-2=Specifying `styleClass="nav-list"` and list item hyperlinked icons
 portal-navbar=[javadoc:com.liferay.faces.portal.component.navbar.NavBar] is a [javadoc:javax.faces.component.UIPanel] component that renders a `&lt;div&gt;...&lt;/div&gt;` element. It is designed to be used in conjunction with [vdldoc:portal:nav] and [vdldoc:portal:navItem] child component tags.
 portal-navbar-general=Specify a *navigation-bar* of links using [vdldoc:portal:nav] and [vdldoc:portal:navItem] child component tags.
+portal-navbar-responsive=The component has a responsive layout feature for small/mobile displays that causes the *grand-child* [vdldoc:alloy:navItem] links to "collapse", meaning that an icon is displayed with a popup menu containing the links. To enable this feature, specify [vdldoc:portal:nav:collapsible]=`true` for the *child* [vdldoc:alloy:nav] component tag.
+portal-navbar-responsive-example-1=Responsive feature enabled for small/mobile displays
 portal-permissionsurl=[javadoc:com.liferay.faces.portal.component.permissionsurl.PermissionsURL] is a [javadoc:javax.faces.component.UIOutput] component that generates a URL pointing to the Liferay Portal Permissions UI. If the [vdldoc:portal:permissionsURL:var] attribute is present, the component introduces a variable into the EL. Otherwise, the URL is written to the response.
 portal-permissionsurl-general=Access the *Portlet Resource Permissions* by specifying the primary key of a portlet via the [vdldoc:portal:permissionsURL:resourcePrimKey] attribute, and optionally specifying [vdldoc:portal:permissionsURL:roleTypes] in order to control which roles are displayed in the Liferay Portal Permissions UI.
 portal-permissionsurl-general-example-1=Introducing a [vdldoc:portal:permissionsURL:var] into the EL with default role types (Guest, Owner, Power User, Site Member, User)
@@ -579,6 +581,7 @@ rendered=Rendered
 required=Required
 required-message=This is a required field
 resource=Resource
+responsive=Responsive
 right-to-left=Right-To-Left
 rowlevel=Row-Level
 select=Select
