FACES-1897 Develop alloy:inputDate component (added responsive attribute with default value of true) FACES-1954 Develop alloy:inputTime component (added responsive attribute with default value of true)

--- a/demos/showcase/showcase-webapp/src/main/resources/i18n.properties
+++ b/demos/showcase/showcase-webapp/src/main/resources/i18n.properties
@@ -118,7 +118,7 @@ alloy-importconstants-general-example-3=Importing from a Java interface
 alloy-inputdate=[javadoc:com.liferay.faces.alloy.component.inputdate.InputDate] is a [javadoc:javax.faces.component.UIInput] component that renders an `&lt;input type="text"&gt;` element and a *calendar popover* with selectable dates. The component attempts to automatically convert the submitted value to a [javadoc:java.util.Date] via a built-in [javadoc:javax.faces.convert.DateTimeConverter].
 alloy-inputdate-date-pattern=A *custom pattern* can be specified via the [vdldoc:alloy:inputDate:datePattern] attribute. The syntax of the date pattern follows the format specified by [javadoc:java.text.SimpleDateFormat].
 alloy-inputdate-date-pattern-example=Specifying `datePattern="EEEE, MMM dd, yyyy"`
-alloy-inputdate-general=The [vdldoc:alloy:inputDate:showOn] attribute specifies which events will popup the calendar.
+alloy-inputdate-general=The [vdldoc:alloy:inputDate:showOn] attribute specifies which events will popup the calendar. When [vdldoc:alloy:inputDate:responsive]=`true` (the default), then the component will render an HTML5 &lt;input type="date" /&gt; element on small/mobile displays in order to enable selection of a date with the mobile device's native UI.
 alloy-inputdate-general-example-1=Specifying [vdldoc:alloy:inputDate:showOn]=`focus` (the default)
 alloy-inputdate-general-example-2=Specifying [vdldoc:alloy:inputDate:showOn]=`button`
 alloy-inputdate-general-example-3=Specifying [vdldoc:alloy:inputDate:showOn]=`both`
@@ -173,7 +173,7 @@ alloy-inputtextarea-validation=The [vdldoc:alloy:inputTextarea:value] attribute 
 alloy-inputtime=[javadoc:com.liferay.faces.alloy.component.inputtime.InputTime] is a [javadoc:javax.faces.component.UIInput] component that renders an `&lt;input type="text"&gt;` element and a *list popover* with selectable times. The component attempts to automatically convert the submitted value to a [javadoc:java.util.Date] via a built-in [javadoc:javax.faces.convert.DateTimeConverter].
 alloy-inputtime-filter=The list of times can be *filtered* according to user input via the [vdldoc:alloy:inputTime:filterType] attribute.
 alloy-inputtime-filter-example=Specifying `filterType="phraseMatch"`
-alloy-inputtime-general=The [vdldoc:alloy:inputDate:showOn] attribute specifies which events will popup the list of selectable times.
+alloy-inputtime-general=The [vdldoc:alloy:inputDate:showOn] attribute specifies which events will popup the list of selectable times. When [vdldoc:alloy:inputTime:responsive]=`true` (the default), then the component will render an HTML5 &lt;input type="time" /&gt; element on small/mobile displays in order to enable selection of a time with the mobile device's native UI.
 alloy-inputtime-general-example-1=Specifying [vdldoc:alloy:inputTime:showOn]=`focus` (the default)
 alloy-inputtime-general-example-2=Specifying [vdldoc:alloy:inputTime:showOn]=`button`
 alloy-inputtime-general-example-3=Specifying [vdldoc:alloy:inputTime:showOn]=`both`
@@ -580,7 +580,6 @@ rendered=Rendered
 required=Required
 required-message=This is a required field
 resource=Resource
-responsive=Responsive
 right-to-left=Right-To-Left
 rowlevel=Row-Level
 select=Select
