--- a/test/test-setup-hook/pom.xml
+++ b/test/test-setup-hook/pom.xml
@@ -4,7 +4,7 @@
 	<parent>
 		<groupId>com.liferay.faces.test</groupId>
 		<artifactId>liferay-faces-test</artifactId>
-		<version>4.1.0-m2-SNAPSHOT</version>
+		<version>4.1.0-beta1-SNAPSHOT</version>
 		<relativePath>../pom.xml</relativePath>
 	</parent>
 	<artifactId>test-setup-hook</artifactId>
