--- a/doc/pom.xml
+++ b/doc/pom.xml
@@ -4,7 +4,7 @@
 	<parent>
 		<groupId>com.liferay.faces</groupId>
 		<artifactId>liferay-faces</artifactId>
-		<version>4.2.0-m2</version>
+		<version>4.2.0-beta1-SNAPSHOT</version>
 	</parent>
 	<artifactId>liferay-faces-doc</artifactId>
 	<name>Liferay Faces Documentation</name>
