--- a/test/integration/demos/portal/pom.xml
+++ b/test/integration/demos/portal/pom.xml
@@ -5,7 +5,7 @@
 	<parent>
 		<groupId>com.liferay.faces.test</groupId>
 		<artifactId>liferay-faces-test-integration-demos</artifactId>
-		<version>4.2.0-m2</version>
+		<version>4.2.0-beta1-SNAPSHOT</version>
 		<relativePath>../pom.xml</relativePath>
 	</parent>
 
