FACES-1998 Refactor dateSelect and timeSelect events into valueChange event

--- a/demos/showcase/showcase-webapp/src/main/resources/i18n.properties
+++ b/demos/showcase/showcase-webapp/src/main/resources/i18n.properties
@@ -122,9 +122,7 @@ alloy-inputdate-general=The [vdldoc:alloy:inputDate:showOn] attribute specifies 
 alloy-inputdate-general-example-1=Specifying [vdldoc:alloy:inputDate:showOn]=`focus` (the default)
 alloy-inputdate-general-example-2=Specifying [vdldoc:alloy:inputDate:showOn]=`button`
 alloy-inputdate-general-example-3=Specifying [vdldoc:alloy:inputDate:showOn]=`both`
-alloy-inputdate-instant-ajax=The component supports *instant Ajax* by simply adding an [vdldoc:f:ajax] child tag.
-alloy-inputdate-instant-ajax-example-1=Instant-Ajax when a date is selected
-alloy-inputdate-instant-ajax-example-2=Instant-Ajax when a date is selected or when the user enters a value
+alloy-inputdate-instant-ajax=The component supports *instant Ajax* by adding an [vdldoc:f:ajax] child tag.
 alloy-inputdate-localization=A *custom locale* can be specified via the [vdldoc:alloy:inputDate:locale] attribute.
 alloy-inputdate-localization-example-1=Hard coded Brazilian Portuguese locale
 alloy-inputdate-localization-example-2=Japanese [javadoc:java.util.Locale] obtained from a bean via EL
@@ -179,9 +177,7 @@ alloy-inputtime-general-example-2=Specifying [vdldoc:alloy:inputTime:showOn]=`bu
 alloy-inputtime-general-example-3=Specifying [vdldoc:alloy:inputTime:showOn]=`both`
 alloy-inputtime-highlighter=Times can be *highlighted* according to user input via the [vdldoc:alloy:inputTime:highlighterType] attribute.
 alloy-inputtime-highlighter-example=Specifying `highlighterType="phraseMatch"`
-alloy-inputtime-instant-ajax=The component supports *instant Ajax* by simply adding an [vdldoc:f:ajax] child tag.
-alloy-inputtime-instant-ajax-example-1=Instant-Ajax when a time is selected
-alloy-inputtime-instant-ajax-example-2=Instant-Ajax when a time is selected or when the user enters a value
+alloy-inputtime-instant-ajax=The component supports *instant Ajax* by adding an [vdldoc:f:ajax] child tag.
 alloy-inputtime-localization=A *custom locale* can be specified via the [vdldoc:alloy:inputTime:locale] attribute.
 alloy-inputtime-localization-example-1=Hard coded Brazilian Portuguese locale 
 alloy-inputtime-localization-example-2=Japanese [javadoc:java.util.Locale] obtained from a bean via EL
