--- a/bridge-api/pom.xml
+++ b/bridge-api/pom.xml
@@ -24,6 +24,10 @@
 			<groupId>javax.faces</groupId>
 			<artifactId>javax.faces-api</artifactId>
 		</dependency>
+		<dependency>
+			<groupId>com.liferay.portal</groupId>
+			<artifactId>portal-service</artifactId>
+		</dependency>
 	</dependencies>
 
 	<build>
