FACES-2005 Develop alloy:video component FACES-2034 Develop alloy:audio component

--- a/demos/showcase/showcase-webapp/src/main/resources/i18n.properties
+++ b/demos/showcase/showcase-webapp/src/main/resources/i18n.properties
@@ -10,8 +10,17 @@ alloy-accordion-general-example-2=Specifying the [vdldoc:alloy:tab:headerText] a
 alloy-accordion-multiple=When [vdldoc:alloy:accordion:multiple]=`true`, multiple tabs can be expanded. <br /><br />*JavaScript API:*<ul><li>`collapseAll()` causes all of the accordion tabs to close</li><li>`expandAll()` causes all of the accordion tabs to open</li></ul>
 alloy-accordion-selected-tab=The [vdldoc:alloy:accordion:selectedIndex] attribute is a zero-based integer representing the selected tab. The *client-side state* of the tab is preserved when a form is submitted.
 alloy-accordion-server-events=Specifying the [vdldoc:f:ajax] child tag with [vdldoc:f:ajax:event]=`tabCollapse` or `tabExpand` will broadcast the server-side [javadoc:com.liferay.faces.alloy.component.tab.TabCollapseEvent] or [javadoc:com.liferay.faces.alloy.component.tab.TabExpandEvent] respectively. Listening to the event is accomplished by specifying a backing-bean method via the [vdldoc:alloy:accordion:tabCollapseListener] and [vdldoc:alloy:accordion:tabExpandListener] attributes.
-alloy-audio=[javadoc:com.liferay.faces.alloy.component.Audio] is a [javadoc:javax.faces.component.UIOutput] component that renders a `&lt;div&gt;` that contains an HTML5 `&lt;audio&gt;` element. It also supports graceful degradation for older browsers.
-alloy-audio-general=The general usage of the component is to set the [vdldoc:alloy:audio:value] attribute to a [javadoc:java.lang.String] audio URL. Alternatively a [javadoc:java.util.List]&lt;[javadoc:java.lang.String]&gt; can be specified that contains additional audio URLs.
+alloy-audio=[javadoc:com.liferay.faces.alloy.component.Audio is a [javadoc:javax.faces.component.UIComponent] component that renders a `&lt;div&gt;` that contains an HTML5 `&lt;audio&gt;` element. It also supports graceful degradation for older browsers using the <a href="http://get.adobe.com/flashplayer/" target="_blank">Flash</a> audio player.
+alloy-audio-general=The general usage of the component is to set the [vdldoc:alloy:audio:value] attribute to a [javadoc:java.lang.String] audio URL. Degradation to a Flash player can be enabled via the [vdldoc:alloy:audio:degrade] attribute (defaults to true). 
+alloy-audio-general-example-1=Context-relative path to a resource via the [vdldoc:alloy:audio:value] attribute
+alloy-audio-general-example-2=JSF resource via the `#{resource}` EL keyword
+alloy-audio-general-example-3=JSF resource via the Alloy [javadoc:com.liferay.faces.alloy.component.resource.Resource] component
+alloy-audio-general-example-4=JSF resource via the [vdldoc:alloy:audio:library] and [vdldoc:alloy:audio:name] attributes
+alloy-audio-alternative-flash-player=The component supports alternative fallback Flash players via the [vdldoc:alloy:audio:flashPlayer] attribute. Additional Flash `&lt;param&gt;` tags can be inserted into the Flash player's `&lt;object&gt;` tag by specifying an [vdldoc:f:facet] with `name="flash"`.
+alloy-audio-alternative-formats=The component supports supplying alternative audios to support different browsers.
+alloy-audio-alternative-formats-example-1=Supplying alternative audios via [vdldoc:alloy:resource] child tags.
+alloy-audio-alternative-formats-example-2=Supplying alternative audios via supplying a collection of Alloy [javadoc:com.liferay.faces.alloy.component.resource.Resource]s in the [vdldoc:alloy:audio:value] attribute.
+alloy-audio-html5-passthrough=The component can be utilized as an HTML5 passthrough element.
 alloy-autocomplete=[javadoc:com.liferay.faces.alloy.component.autocomplete.AutoComplete] is a [javadoc:javax.faces.component.UIInput] component that renders an `&lt;input&gt;` element and a popup list. Suggestions (list items) can be added by specifying [vdldoc:f:selectItem] or [vdldoc:f:selectItems] tags as children. Since it extends [javadoc:javax.faces.component.html.HtmlInputText], it supports all the features of [vdldoc:h:inputText].
 alloy-autocomplete-general=This component includes built-in *server-side* and *client-side* item filters which can be utilized in place of custom filtering.
 alloy-autocomplete-general-example-1=Server-side filtering
@@ -334,8 +343,19 @@ alloy-tabview-dynamic-tabs=Tabs can be rendered *dynamically* by setting the [vd
 alloy-tabview-selected-tab=The [vdldoc:alloy:tabView:selectedIndex] attribute is a zero-based integer representing the selected tab. The *client-side state* of the tab is preserved when a form is submitted.
 alloy-tabview-server-events=Specifying the [vdldoc:f:ajax] child tag with [vdldoc:f:ajax:event]=`tabSelect` will broadcast the server-side [javadoc:com.liferay.faces.alloy.component.tab.TabSelectEvent]. Listening to the event is accomplished by specifying a backing-bean method via the [vdldoc:alloy:tabView:tabSelectListener] attribute.
 alloy-tabview-wizard=The component can act like a step-by-step *wizard* by controlling the [vdldoc:alloy:tabView:selectedIndex] attribute of the [vdldoc:alloy:tabView] and the [vdldoc:alloy:tab:disabled] attribute of each [vdldoc:alloy:tab] child.
-alloy-video=[javadoc:com.liferay.faces.alloy.component.Video is a [javadoc:javax.faces.component.UIOutput] component that renders a `&lt;div&gt;` that contains an HTML5 `&lt;video&gt;` element. It also supports graceful degradation for older browsers using the <a href="http://get.adobe.com/flashplayer/" target="_blank">Flash</a> video player.
-alloy-video-general=The general usage of the component is to set the [vdldoc:alloy:video:value] attribute to a [javadoc:java.lang.String] video URL. Alternatively a [javadoc:java.util.List]&lt;[javadoc:java.lang.String]&gt; can be specified that contains additional video URLs.
+alloy-video=[javadoc:com.liferay.faces.alloy.component.Video is a [javadoc:javax.faces.component.UIComponent] that renders a `&lt;div&gt;` that contains an HTML5 `&lt;video&gt;` element. It also supports graceful degradation for older browsers using the <a href="http://get.adobe.com/flashplayer/" target="_blank">Flash</a> video player.
+alloy-video-general=The general usage of the component is to set the [vdldoc:alloy:video:value] attribute to a [javadoc:java.lang.String] video URL. Degradation to a Flash player can be enabled via the [vdldoc:alloy:video:degrade] attribute (defaults to true). 
+alloy-video-general-example-1=Context-relative path to a resource via the [vdldoc:alloy:video:value] attribute
+alloy-video-general-example-2=JSF resource via the `#{resource}` EL keyword
+alloy-video-general-example-3=JSF resource via the Alloy [javadoc:com.liferay.faces.alloy.component.resource.Resource] component
+alloy-video-general-example-4=JSF resource via the [vdldoc:alloy:video:library] and [vdldoc:alloy:video:name] attributes
+alloy-video-alternative-flash-player=The component supports alternative fallback Flash players via the [vdldoc:alloy:video:flashPlayer] attribute. Additional Flash `&lt;param&gt;` tags can be inserted into the Flash player's `&lt;object&gt;` tag by specifying an [vdldoc:f:facet] with `name="flash"`.
+alloy-video-alternative-formats=The component supports supplying alternative videos to support different browsers.
+alloy-video-alternative-formats-example-1=Supplying alternative videos via [vdldoc:alloy:resource] child tags.
+alloy-video-alternative-formats-example-2=Supplying alternative videos via supplying a collection of Alloy [javadoc:com.liferay.faces.alloy.component.resource.Resource]s in the [vdldoc:alloy:video:value] attribute.
+alloy-video-html5-passthrough=The component can be utilized as an HTML5 passthrough element.
+alternative-flash-player=Alternative Flash Player
+alternative-formats=Alternative Formats
 answer-at-stackoverflow=answer at stackoverflow
 append-new-files=Append New Files
 attribute-value=Attribute Value
@@ -487,6 +507,7 @@ header=Header
 header-text=Header Text
 header-text-with-xml=Header Text <i>with xml</i>
 hidden-field=Hidden Field
+html5-passthrough=HTML5 Passthrough
 hyperlink-targeting-the-showcase-portlet=Hyperlink targeting the Showcase portlet
 immediate=Immediate
 i-agree-to-the-terms-of-the-license-agreement=I agree to the terms of the license agreement
@@ -537,6 +558,7 @@ password=Password
 pick=Pick
 please-consider-using=Please consider using
 please-choose-a-meeting-time-lunchtime-12-1-is-not-valid=Please choose a meeting time (Lunchtime from 12pm-1pm is not valid)
+please-visit-this-website-with-an-up-to-date-browser=Please visit this website with an up-to-date browser
 portal-buttonrow=[javadoc:com.liferay.faces.portal.component.buttonrow.ButtonRow] is a [javadoc:javax.faces.component.UIPanel] component that renders a `&lt;div&gt;` element for grouping purposes. Since it extends [javadoc:javax.faces.component.html.HtmlPanelGroup], it supports all the features of [vdldoc:h:panelGroup].
 portal-buttonrow-general=Buttons are arranged in a row by specifying [vdldoc:alloy:button] child tags.
 portal-header=[javadoc:com.liferay.faces.portal.component.header.Header] is a [javadoc:javax.faces.component.UIPanel] component that renders a `&lt;div&gt;` tag. Since it extends [javadoc:javax.faces.component.html.HtmlPanelGroup], it supports all the features of [vdldoc:h:panelGroup].
