--- a/pom.xml
+++ b/pom.xml
@@ -45,6 +45,11 @@
 			<organizationUrl>http://www.liferay.com</organizationUrl>
 		</developer>
 		<developer>
+			<name>Juan Gonzalez</name>
+			<organization>Liferay, Inc.</organization>
+			<organizationUrl>http://www.liferay.com</organizationUrl>
+		</developer>
+		<developer>
 			<name>Bruno Basto</name>
 			<organization>Liferay, Inc.</organization>
 			<organizationUrl>http://www.liferay.com</organizationUrl>
