--- a/pom.xml
+++ b/pom.xml
@@ -51,14 +51,14 @@
 			<organizationUrl>http://www.liferay.com</organizationUrl>
 		</developer>
 		<developer>
-			<name>Atul Patel</name>
-			<organization>Triton Services, Inc.</organization>
-			<organizationUrl>http://www.tritonsvc.com</organizationUrl>
+			<name>Juan Gonzalez</name>
+			<organization>Liferay, Inc.</organization>
+			<organizationUrl>http://www.liferay.com</organizationUrl>
 		</developer>
 		<developer>
-			<name>Robin Wyss</name>
-			<organization>Mimacom AG</organization>
-			<organizationUrl>http://www.mimacom.com</organizationUrl>
+			<name>Bruno Basto</name>
+			<organization>Liferay, Inc.</organization>
+			<organizationUrl>http://www.liferay.com</organizationUrl>
 		</developer>
 	</developers>
 
