Task: Remove sub-menus from split buttons in Showcase

--- a/demos/showcase/showcase-webapp/src/main/resources/i18n.properties
+++ b/demos/showcase/showcase-webapp/src/main/resources/i18n.properties
@@ -39,10 +39,9 @@ alloy-button-general=*Children* such as [vdldoc:alloy:icon], [vdldoc:alloy:outpu
 alloy-button-general-example-1=Styling via children
 alloy-button-general-example-2=Styling via [vdldoc:alloy:button:image] attribute
 alloy-button-general-example-3=Styling via [vdldoc:alloy:button:value] attribute
-alloy-button-menu=There are different ways to style the menus
-alloy-button-menu-example-1=Styling sub-menus via the [vdldoc:alloy:menu:label] attribute
-alloy-button-menu-example-2=Styling sub-menus via the [vdldoc:f:facet] tag
-alloy-button-menu-example-3=Styling the button with [vdldoc:f:facet]
+alloy-button-menu=There are different options for creating menus
+alloy-button-menu-example-1=Creating menus via the [vdldoc:alloy:menu] tag
+alloy-button-menu-example-2=Styling the button with [vdldoc:f:facet]
 alloy-button-navigation=The component can be used to *navigate* between pages with the [vdldoc:alloy:button:outcome] attribute. Setting [vdldoc:alloy:button:includeViewParams]=`true` will automatically include all of the [vdldoc:f:viewParam] tags (view parameters) as URL parameters.
 alloy-button-param=URL *parameters* can be specified via [vdldoc:f:param] child tags. Setting [vdldoc:alloy:button:includeViewParams]=`true` will automatically include all of the [vdldoc:f:viewParam] tags (view parameters) as URL parameters.
 alloy-button-various-styles=The component can be *styled* with Bootstrap class names as described in the <a href="http://liferay.github.io/alloy-bootstrap/base-css.html#buttons" target="_blank">Alloy Base CSS</a> documentation.
@@ -52,10 +51,9 @@ alloy-commandbutton-general-example-1=Styling via children
 alloy-commandbutton-general-example-2=Styling via [vdldoc:alloy:commandButton:image] attribute
 alloy-commandbutton-general-example-3=Styling via [vdldoc:alloy:commandButton:value] attribute
 alloy-commandbutton-immediate=When the [vdldoc:alloy:commandButton:immediate] attribute is `true`, the [vdldoc:alloy:commandButton:action] and [vdldoc:alloy:commandButton:actionListener] callbacks execute during the *APPLY_REQUEST_VALUES* phase of the JSF lifecycle, rather than the normal INVOKE_APPLICATION phase.
-alloy-commandbutton-menu=There are different ways to style the menus
-alloy-commandbutton-menu-example-1=Styling sub-menus via the [vdldoc:alloy:menu:label] attribute
-alloy-commandbutton-menu-example-2=Styling sub-menus via the [vdldoc:f:facet] tag
-alloy-commandbutton-menu-example-3=Styling the button with [vdldoc:f:facet]
+alloy-commandbutton-menu=There are different options for creating menus
+alloy-commandbutton-menu-example-1=Creating menus via the [vdldoc:alloy:menu] tag
+alloy-commandbutton-menu-example-2=Styling the button with [vdldoc:f:facet]
 alloy-commandbutton-navigation=The component can be used to *navigate* between pages with the [vdldoc:alloy:commandbutton:action] attribute. By specifying a `&lt;redirect&gt;` element in the `navigation-rule`, it will utilize the POST/REDIRECT/GET pattern.
 alloy-commandbutton-param=URL *parameters* can be specified via the [vdldoc:alloy:commandbutton:action] attribute. By specifying a `faces-redirect=true` parameter in the action attribute, it will utilize the POST/REDIRECT/GET pattern.
 alloy-commandbutton-value-attribute=Although the component&apos;s [vdldoc:alloy:commandButton:value] attribute is *read-only* (can&apos;t be changed via form submission), it can be used to determine that an item has been selected by the user.
