FACES-1719 IllegalStateException thrown by JBoss Weld in post-redirect-get portlet environment like Apache Pluto

--- a/demos/bridge/jsf2-cdi-portlet/pom.xml
+++ b/demos/bridge/jsf2-cdi-portlet/pom.xml
@@ -99,6 +99,11 @@
 			<artifactId>liferay-faces-alloy</artifactId>
 			<version>${project.version}</version>
 		</dependency>
+		<dependency>
+			<groupId>com.liferay.faces</groupId>
+			<artifactId>liferay-faces-cdi-weld</artifactId>
+			<version>${project.version}</version>
+		</dependency>
 	</dependencies>
 
 </project>
