--- a/support/pom.xml
+++ b/support/pom.xml
@@ -12,6 +12,11 @@
 	<packaging>pom</packaging>
 	<name>Liferay Faces Support</name>
 
+	<modules>
+		<module>cdi/cdi-compat</module>
+		<module>cdi/cdi-weld</module>
+	</modules>
+
 	<profiles>
 
 		<!-- The release profile ensures that the version elements in the child pom.xml descriptors -->
@@ -19,6 +24,8 @@
 		<profile>
 			<id>release</id>
 			<modules>
+				<module>cdi/cdi-compat</module>
+				<module>cdi/cdi-weld</module>
 				<module>weblogic</module>
 			</modules>
 		</profile>
@@ -31,18 +38,7 @@
 				<module>weblogic</module>
 			</modules>
 		</profile>
-	</profiles>
 
-	<build>
-		<plugins>
-			<plugin>
-				<groupId>org.apache.maven.plugins</groupId>
-				<artifactId>maven-deploy-plugin</artifactId>
-				<configuration>
-					<skip>true</skip>
-				</configuration>
-			</plugin>
-		</plugins>
-	</build>
+	</profiles>
 
 </project>
