--- a/support/cdi/cdi-compat/pom.xml
+++ b/support/cdi/cdi-compat/pom.xml
@@ -5,7 +5,7 @@
 		<groupId>com.liferay.faces</groupId>
 		<artifactId>liferay-faces</artifactId>
 		<version>4.1.0-beta1-SNAPSHOT</version>
-		<relativePath>../pom.xml</relativePath>
+		<relativePath>../../../pom.xml</relativePath>
 	</parent>
 	<artifactId>liferay-faces-cdi-compat</artifactId>
 	<name>Liferay Faces CDI Compat</name>
