--- a/support/pom.xml
+++ b/support/pom.xml
@@ -12,16 +12,33 @@
 	<packaging>pom</packaging>
 	<name>Liferay Faces Support</name>
 
-	<build>
-		<plugins>
-			<plugin>
-				<groupId>org.apache.maven.plugins</groupId>
-				<artifactId>maven-deploy-plugin</artifactId>
-				<configuration>
-					<skip>true</skip>
-				</configuration>
-			</plugin>
-		</plugins>
-	</build>
+	<modules>
+		<module>cdi/cdi-compat</module>
+		<module>cdi/cdi-weld</module>
+	</modules>
+
+	<profiles>
+
+		<!-- The release profile ensures that the version elements in the child pom.xml descriptors -->
+		<!-- will be auto-versioned by the maven-release-plugin. -->
+		<profile>
+			<id>release</id>
+			<modules>
+				<module>cdi/cdi-compat</module>
+				<module>cdi/cdi-weld</module>
+				<module>weblogic</module>
+			</modules>
+		</profile>
+
+		<!-- The weblogic profile provides a way for developers to manually build the weblogic related -->
+		<!-- modules since they are not deployed during the release process. -->
+		<profile>
+			<id>weblogic</id>
+			<modules>
+				<module>weblogic</module>
+			</modules>
+		</profile>
+
+	</profiles>
 
 </project>
