--- a/pom.xml
+++ b/pom.xml
@@ -67,7 +67,7 @@
 		<developerConnection>scm:git:https://github.com/liferay/liferay-faces</developerConnection>
 		<url>scm:git:https://github.com/liferay/liferay-faces</url>
 		<tag>HEAD</tag>
-  </scm>
+	</scm>
 
 	<modules>
 		<module>init</module>
@@ -76,11 +76,10 @@
 		<module>alloy</module>
 		<module>bridge-api</module>
 		<module>bridge-impl</module>
-		<module>cdi-compat</module>
 		<module>portal</module>
+		<module>support</module>
 		<module>demos</module>
 		<module>issues</module>
-		<module>support</module>
 		<module>test</module>
 		<module>doc</module>
 	</modules>
@@ -431,6 +430,19 @@
 										<versionRange>[1.4.0,)</versionRange>
 										<goals>
 											<goal>compress</goal>
+										</goals>
+									</pluginExecutionFilter>
+									<action>
+										<ignore></ignore>
+									</action>
+								</pluginExecution>
+								<pluginExecution>
+									<pluginExecutionFilter>
+										<groupId>org.apache.portals.pluto</groupId>
+										<artifactId>maven-pluto-plugin</artifactId>
+										<versionRange>[2.0.3,)</versionRange>
+										<goals>
+											<goal>assemble</goal>
 										</goals>
 									</pluginExecutionFilter>
 									<action>
