FACES-2017 NullPointerException thrown by PreviewTableTemplate on startup FACES-2018 Develop new PostConstructApplicationConfigEvent FACES-2019 Move discovery of the Mojarra InjectionProvider from BridgeSessionListener to the new PostConstructApplicationConfigListener FACES-2020 Add new ApplicationConfig.getContextPath() method in order to support JSF 2.2 ExternalContext.getApplicationContextPath()

--- a/demos/bridge/jsf2-cdi-portlet/src/main/resources/log4j.properties
+++ b/demos/bridge/jsf2-cdi-portlet/src/main/resources/log4j.properties
@@ -6,7 +6,7 @@ log4j.logger.com.liferay.faces.bridge.BridgePhaseActionImpl=DEBUG
 log4j.logger.com.liferay.faces.bridge.BridgePhaseEventImpl=DEBUG
 log4j.logger.com.liferay.faces.bridge.BridgePhaseRenderImpl=DEBUG
 log4j.logger.com.liferay.faces.bridge.BridgePhaseResourceImpl=DEBUG
-log4j.logger.com.liferay.faces.bridge.application.MojarraApplicationAssociate=DEBUG
+log4j.logger.com.liferay.faces.bridge.event.internal.PostConstructApplicationConfigListener=DEBUG
 log4j.logger.com.liferay.faces.bridge.bean.BeanManagerMojarraImpl=DEBUG
 log4j.logger.com.liferay.faces.bridge.bean.MojarraInjectionProvider=DEBUG
 log4j.logger.com.liferay.faces.bridge.config.BridgeConfigImpl=DEBUG
