--- a/issues/bridge/FACES-1470-portlet/src/main/resources/log4j.properties
+++ b/issues/bridge/FACES-1470-portlet/src/main/resources/log4j.properties
@@ -5,7 +5,7 @@ log4j.appender.CONSOLE.layout=org.apache.log4j.PatternLayout
 log4j.appender.CONSOLE.layout.ConversionPattern=%d{ABSOLUTE} %-5p [%c{1}:%L] %m%n
 
 log4j.logger.com.liferay.faces.bridge.application.ApplicationImpl=DEBUG
-log4j.logger.com.liferay.faces.bridge.application.MojarraApplicationAssociate=DEBUG
+log4j.logger.com.liferay.faces.bridge.event.internal.PostConstructApplicationConfigListener=DEBUG
 log4j.logger.com.liferay.faces.bridge.bean.BeanManagerImpl=DEBUG
 log4j.logger.com.liferay.faces.bridge.bean.BeanManagerMojarraImpl=DEBUG
 log4j.logger.com.liferay.faces.bridge.bean.MojarraInjectionProvider=DEBUG
