--- a/util/pom.xml
+++ b/util/pom.xml
@@ -31,6 +31,11 @@
 		</dependency>
 		<dependency>
 			<groupId>com.liferay.portal</groupId>
+			<artifactId>portal-service</artifactId>
+			<optional>true</optional>
+		</dependency>
+		<dependency>
+			<groupId>com.liferay.portal</groupId>
 			<artifactId>util-taglib</artifactId>
 			<optional>true</optional>
 		</dependency>
