--- a/demos/bridge/icefaces1-portlet/src/main/resources/log4j.properties
+++ b/demos/bridge/icefaces1-portlet/src/main/resources/log4j.properties
@@ -6,7 +6,7 @@ log4j.logger.com.liferay.faces.bridge.BridgePhaseActionImpl=DEBUG
 log4j.logger.com.liferay.faces.bridge.BridgePhaseEventImpl=DEBUG
 log4j.logger.com.liferay.faces.bridge.BridgePhaseRenderImpl=DEBUG
 log4j.logger.com.liferay.faces.bridge.BridgePhaseResourceImpl=DEBUG
-log4j.logger.com.liferay.faces.bridge.application.MojarraApplicationAssociate=DEBUG
+log4j.logger.com.liferay.faces.bridge.event.internal.PostConstructApplicationConfigListener=DEBUG
 log4j.logger.com.liferay.faces.bridge.bean.BeanManagerMojarraImpl=DEBUG
 log4j.logger.com.liferay.faces.bridge.bean.MojarraInjectionProvider=DEBUG
 log4j.logger.com.liferay.faces.bridge.config.BridgeConfigImpl=DEBUG
