FACES-2029 Develop new liferayfaces4-portlet demo

--- a/test/integration/demos/bridge/pom.xml
+++ b/test/integration/demos/bridge/pom.xml
@@ -19,6 +19,7 @@
 		<module>jsf2-cdi-portlet</module>
 		<!-- <module>jsf2-html5-portlet</module> -->
 		<module>jsf2-spring-portlet</module>
+		<module>liferayfaces4-portlet</module>
 		<module>primefaces4-portlet</module>
 		<module>primefaces5-portlet</module>
 		<!-- richfaces4-portlet cannot be tested on WebLogic due to FACES-1677 -->
